feat: 创建评价功能事项、自动生成请求校验、自定义错误码返回
