# api/review/v1/review.pb.validate.go
@@ -1,0 +1,339 @@
+// Code generated by protoc-gen-validate. DO NOT EDIT.
+// source: api/review/v1/review.proto
+
+package v1
+
+import (
+	"bytes"
+	"errors"
+	"fmt"
+	"net"
+	"net/mail"
+	"net/url"
+	"regexp"
+	"sort"
+	"strings"
+	"time"
+	"unicode/utf8"
+
+	"google.golang.org/protobuf/types/known/anypb"
+)
+
+// ensure the imports are used
+var (
+	_ = bytes.MinRead
+	_ = errors.New("")
+	_ = fmt.Print
+	_ = utf8.UTFMax
+	_ = (*regexp.Regexp)(nil)
+	_ = (*strings.Reader)(nil)
+	_ = net.IPv4len
+	_ = time.Duration(0)
+	_ = (*url.URL)(nil)
+	_ = (*mail.Address)(nil)
+	_ = anypb.Any{}
+	_ = sort.Sort
+)
+
+// Validate checks the field values on CreateReviewReq with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// first error encountered is returned, or nil if there are no violations.
+func (m *CreateReviewReq) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on CreateReviewReq with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// CreateReviewReqMultiError, or nil if none found.
+func (m *CreateReviewReq) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *CreateReviewReq) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if m.GetUserId() <= 0 {
+		err := CreateReviewReqValidationError{
+			field:  "UserId",
+			reason: "value must be greater than 0",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if m.GetOrderId() <= 0 {
+		err := CreateReviewReqValidationError{
+			field:  "OrderId",
+			reason: "value must be greater than 0",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if _, ok := _CreateReviewReq_Score_InLookup[m.GetScore()]; !ok {
+		err := CreateReviewReqValidationError{
+			field:  "Score",
+			reason: "value must be in list [0 1 2 3 4 5]",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if _, ok := _CreateReviewReq_ServiceScore_InLookup[m.GetServiceScore()]; !ok {
+		err := CreateReviewReqValidationError{
+			field:  "ServiceScore",
+			reason: "value must be in list [0 1 2 3 4 5]",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if _, ok := _CreateReviewReq_ExpressScore_InLookup[m.GetExpressScore()]; !ok {
+		err := CreateReviewReqValidationError{
+			field:  "ExpressScore",
+			reason: "value must be in list [0 1 2 3 4 5]",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if l := utf8.RuneCountInString(m.GetContent()); l < 8 || l > 255 {
+		err := CreateReviewReqValidationError{
+			field:  "Content",
+			reason: "value length must be between 8 and 255 runes, inclusive",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	// no validation rules for PicInfo
+
+	// no validation rules for VideoInfo
+
+	// no validation rules for VoiceInfo
+
+	// no validation rules for Anonymous
+
+	if len(errors) > 0 {
+		return CreateReviewReqMultiError(errors)
+	}
+
+	return nil
+}
+
+// CreateReviewReqMultiError is an error wrapping multiple validation errors
+// returned by CreateReviewReq.ValidateAll() if the designated constraints
+// aren't met.
+type CreateReviewReqMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m CreateReviewReqMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m CreateReviewReqMultiError) AllErrors() []error { return m }
+
+// CreateReviewReqValidationError is the validation error returned by
+// CreateReviewReq.Validate if the designated constraints aren't met.
+type CreateReviewReqValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e CreateReviewReqValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e CreateReviewReqValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e CreateReviewReqValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e CreateReviewReqValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e CreateReviewReqValidationError) ErrorName() string { return "CreateReviewReqValidationError" }
+
+// Error satisfies the builtin error interface
+func (e CreateReviewReqValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sCreateReviewReq.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = CreateReviewReqValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = CreateReviewReqValidationError{}
+
+var _CreateReviewReq_Score_InLookup = map[int32]struct{}{
+	0: {},
+	1: {},
+	2: {},
+	3: {},
+	4: {},
+	5: {},
+}
+
+var _CreateReviewReq_ServiceScore_InLookup = map[int32]struct{}{
+	0: {},
+	1: {},
+	2: {},
+	3: {},
+	4: {},
+	5: {},
+}
+
+var _CreateReviewReq_ExpressScore_InLookup = map[int32]struct{}{
+	0: {},
+	1: {},
+	2: {},
+	3: {},
+	4: {},
+	5: {},
+}
+
+// Validate checks the field values on CreateReviewRsp with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// first error encountered is returned, or nil if there are no violations.
+func (m *CreateReviewRsp) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on CreateReviewRsp with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// CreateReviewRspMultiError, or nil if none found.
+func (m *CreateReviewRsp) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *CreateReviewRsp) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for ReviewId
+
+	if len(errors) > 0 {
+		return CreateReviewRspMultiError(errors)
+	}
+
+	return nil
+}
+
+// CreateReviewRspMultiError is an error wrapping multiple validation errors
+// returned by CreateReviewRsp.ValidateAll() if the designated constraints
+// aren't met.
+type CreateReviewRspMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m CreateReviewRspMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m CreateReviewRspMultiError) AllErrors() []error { return m }
+
+// CreateReviewRspValidationError is the validation error returned by
+// CreateReviewRsp.Validate if the designated constraints aren't met.
+type CreateReviewRspValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e CreateReviewRspValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e CreateReviewRspValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e CreateReviewRspValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e CreateReviewRspValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e CreateReviewRspValidationError) ErrorName() string { return "CreateReviewRspValidationError" }
+
+// Error satisfies the builtin error interface
+func (e CreateReviewRspValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sCreateReviewRsp.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = CreateReviewRspValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = CreateReviewRspValidationError{}
